# divfreebubbles

./: .gitignore  CMakeLists.txt  README.md
cmake/: EnableCatch2.cmake  add_unit_test.cmake
data/128/: e_1.txt  e_10.txt  e_100.txt  e_101.txt  e_102.txt  e_103.txt  e_104.txt  e_105.txt  e_106.txt  e_107.txt  e_108.txt  e_109.txt  e_11.txt  e_110.txt  e_111.txt  e_112.txt  e_113.txt  e_114.txt  e_115.txt  e_116.txt  e_117.txt  e_118.txt  e_119.txt  e_12.txt  e_120.txt  e_121.txt  e_122.txt  e_123.txt  e_124.txt  e_125.txt  e_126.txt  e_127.txt  e_128.txt  e_129.txt  e_13.txt  e_14.txt  e_15.txt  e_16.txt  e_17.txt  e_18.txt  (+218 more)
data/16/: e_1.txt  e_10.txt  e_11.txt  e_12.txt  e_13.txt  e_14.txt  e_15.txt  e_16.txt  e_17.txt  e_2.txt  e_3.txt  e_4.txt  e_5.txt  e_6.txt  e_7.txt  e_8.txt  e_9.txt  nu_1.txt  nu_10.txt  nu_11.txt  nu_12.txt  nu_13.txt  nu_14.txt  nu_15.txt  nu_16.txt  nu_17.txt  nu_2.txt  nu_3.txt  nu_4.txt  nu_5.txt  nu_6.txt  nu_7.txt  nu_8.txt  nu_9.txt
data/64/: e_1.txt  e_10.txt  e_11.txt  e_12.txt  e_13.txt  e_14.txt  e_15.txt  e_16.txt  e_17.txt  e_18.txt  e_19.txt  e_2.txt  e_20.txt  e_21.txt  e_22.txt  e_23.txt  e_24.txt  e_25.txt  e_26.txt  e_27.txt  e_28.txt  e_29.txt  e_3.txt  e_30.txt  e_31.txt  e_32.txt  e_33.txt  e_34.txt  e_35.txt  e_36.txt  e_37.txt  e_38.txt  e_39.txt  e_4.txt  e_40.txt  e_41.txt  e_42.txt  e_43.txt  e_44.txt  e_45.txt  (+90 more)
data/64_mod/: e_12.txt  e_14.txt  e_17.txt  e_18.txt  e_19.txt  e_2.txt  e_20.txt  e_22.txt  e_23.txt  e_24.txt  e_25.txt  e_28.txt  e_3.txt  e_30.txt  e_34.txt  e_44.txt  e_45.txt  e_46.txt  e_48.txt  e_5.txt  e_51.txt  e_56.txt  e_58.txt  e_59.txt  e_60.txt  e_61.txt  e_62.txt  e_63.txt  e_64.txt  e_8.txt  nu_14.txt  nu_21.txt  nu_25.txt  nu_28.txt  nu_29.txt  nu_3.txt  nu_32.txt  nu_33.txt  nu_35.txt  nu_36.txt  (+19 more)
data/8/: e_1.txt  e_2.txt  e_3.txt  e_4.txt  e_5.txt  e_6.txt  e_7.txt  e_8.txt  e_9.txt  nu_1.txt  nu_2.txt  nu_3.txt  nu_4.txt  nu_5.txt  nu_6.txt  nu_7.txt  nu_8.txt  nu_9.txt
data/8_mod/: e_2.txt  e_4.txt  e_6.txt  e_7.txt  nu_2.txt  nu_5.txt
divfree/: CMakeLists.txt  Common.cpp  Common.h  TPZApproxSpaceKernelHdiv.cpp  TPZApproxSpaceKernelHdiv.h  TPZCompElConstFluxHybrid.cpp  TPZCompElConstFluxHybrid.h  TPZCompElHCurlNoGrads.cpp  TPZCompElHCurlNoGrads.h  TPZCompElHDivConstant.cpp  TPZCompElHDivConstantBC.cpp  TPZCompElHDivConstantBC.h  TPZCompElHDivDuplConnects.cpp  TPZCompElHDivDuplConnects.h  TPZCompElHDivDuplConnectsBound.cpp  TPZCompElHDivDuplConnectsBound.h  TPZCompElHDivSemiHybrid.cpp  TPZCompElHDivSemiHybrid.h  TPZCompElHDivSemiHybridBound.cpp  TPZCompElHDivSemiHybridBound.h  TPZCompElKernelHDiv3D.cpp  TPZCompElKernelHDiv3D.h  TPZCompElKernelHdiv.cpp  TPZCompElKernelHdiv.h  TPZCompElKernelHdivBC.cpp  TPZCompElKernelHdivBC.h  TPZCompElKernelHdivBC3D.cpp  TPZCompElKernelHdivBC3D.h  TPZDoubleMatRed.cpp  TPZDoubleMatRed.h  TPZHCurlEquationFilter.cpp  TPZHCurlEquationFilter.h  TPZHDivApproxSpaceCreator.cpp  TPZHDivApproxSpaceCreator.h  TPZKernelHdivHybridizer.cpp  TPZKernelHdivHybridizer.h  TPZKernelHdivUtils.cpp  TPZKernelHdivUtils.h  TPZL2ProjectionCS.cpp  TPZL2ProjectionCS.h  (+26 more)
divfree/deprecated/: TPZHDivApproxSpaceCreator.cpp  TPZHDivApproxSpaceCreator.h
headers/: CMakeLists.txt  TPZCompElKernelHdiv.cpp  TPZCompElKernelHdiv.h  TPZCompElKernelHdivBC.cpp  TPZCompElKernelHdivBC.h  TPZCompElKernelHdiv_imp.h  TPZMatDivFreeBubbles.cpp  TPZMatDivFreeBubbles.h  TPZMatDivFreeBubbles_imp.h
material/: TPZMatDivFreeBubbles.h  TPZMatDivFreeBubbles_imp.h
mesh/: 100element.msh  1element.geo  1element.msh  1tetra.geo  1tetra.msh  2tetra.geo  2tetra.msh  4element.msh  Case1Frac.geo  Case1Frac.msh  Case1FracSimple.geo  Case1FracSimple.msh  Case2FracSimple.geo  Case2FracSimple.msh  cube.geo  cube.msh  cube2.geo  cube2.msh  cube3.geo  cube3.msh  five-spot.geo  five-spot.msh  newMesh.geo  newMesh.msh  polygon0.txt  polygon00.txt  polygon1.txt  polygon2.txt  polygon3.txt  polygon4.txt  polygon5.txt  prism.geo  prism.msh  span_tree.geo  span_tree.msh  span_tree2.geo  span_tree2.msh  span_tree3.geo  span_tree3.msh
src/: CMakeLists.txt  main.cpp  main_1element.cpp  main_2fractures.cpp
targets/: CMakeLists.txt  SBFEM.cpp  SHIterative.cpp  dupl_connects.cpp  fiveSpot.cpp  main.cpp  main3d.cpp  main3d_HDIV.cpp  main3d_HDIV_back.cpp  main3d_constant.cpp  main3d_phis.cpp  main_1element.cpp  main_2fractures.cpp  main_MHM_HDivConstant.cpp  main_hpc4.cpp  semiHybrid.cpp  test.cpp  tetra_test.cpp  voronoi_mixed_elas.cpp
test/: CMakeLists.txt  FunctionOrthogonality.cpp  PGD.cpp  Yotov.cpp  condition_number.cpp  doubleMatRed.cpp  dupl_connects.cpp  edge_filter_test.cpp  hybridization_test.cpp  mixedH1.cpp  mixed_elasticity.cpp  spe10.cpp
